added 2 image files and updated readme

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h1 class="h1">Jacob Hopper</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="#Resume">resume</a></li>
-                <li><a href="#Contact Me">contact me </a></li>
-                <li><a href="#Projects">projects</a></li>
-                <li><a href="#About Me">about me </a></li>
+                <li><a href="#Resume">Resume</a></li>
+                <li><a href="#Contact Me">Contact Me </a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#About Me">About Me </a></li>
             </ul>
         </nav>
 
@@ -33,10 +33,10 @@
                 <img src="images/me.PNG">
             </div>
             <h1>About Me </h1>
-            <p>Hello, my name is jacob but all my freinds call me jake i live in Clio,</p>
-            <p>michigan and i currently work at menards in the out side yard.</p>
-            <p>i took up coding so that i can further my knowledge in the field and</p>
-            <p>eventually earn a spot working for a web development company</p>
+            <p>Hello, my name is Jacob but all my friends call me Jake, I live in Clio,</p>
+            <p>Michigan. I currently work at Menards in the outside yard.</p>
+            <p>I took up coding so that I can further my knowledge in the field and</p>
+            <p>eventually earn a spot working for a web development company.</p>
         </section>
         <section id="Projects">
             <div class="projects-h1">
@@ -44,16 +44,28 @@
             </div>
 
             <div class="box1">
-                <h1>project</h1>
+                <h1>Project 1</h1>
+                <a href="https://juicyjake12.github.io/first-module1/">
+                    <img src="images/Horiseon.png">
+                </a>
             </div>
             <div class="box2">
-                <h1>project</h1>
+                <h1>Project 2</h1>
+                <a href="#">
+                    <img src="images/placeholder.png">
+                </a>
             </div>
             <div class="box3">
-                <h1>project</h1>
+                <h1>Project 3</h1>
+                <a href="#">
+                    <img src="images/placeholder.png">
+                </a>
             </div>
             <div class="box4">
-                <h1>project</h1>
+                <h1>Project 4</h1>
+                <a href="#">
+                    <img src="images/placeholder.png">
+                </a>
             </div>
 
         </section>
